--- a/blogspot.html
+++ b/blogspot.html
@@ -11,6 +11,11 @@
           Y este es el párrafo de inicio donde vamos a explicar las cosas
           increibles que se pueden hacer con ramas.
         </p>
+        <p>
+          Los blogs son la mejor forma de compartir inforamción y tus ideas.
+          Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un
+          rockstar. Pero estadísticamente no lo eres... por ahora.
+        </p>
       </div>
     </div>
   </body>
